# awareness-cube

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json
include/: nunchuk.hpp  pins.hpp
src/: main.cpp  nunchuk.cpp  old.cpp
